-
Bug
-
Resolution: Fixed
-
P4: Low
-
6.5.0 Beta2
-
None
-
-
94c16517b (dev), 4ab04b35a (6.5), dbb5c588b (6.4)
It's a bit long, but it's the whole thing. It is Qt-generated script.
/home/home/caoimhin/lucifer data/qt/build-ohmwatts-Desktop_Qt_6_4_2_GCC_64bit-Debug/ui_ohmwatts.h:193: error: no matching member function for call to 'connect'
In file included from ../ohmwatts/ohmwatts.cpp:2:
./ui_ohmwatts.h:193:18: error: no matching member function for call to 'connect'
QObject::connect(doubleSpinBox, &QDoubleSpinBox::valueChanged, lcdNumber, &QLCDNumber::display);
~~~~~~~~~^~~~~~~
/home/caiomhin/Qt/6.4.2/gcc_64/include/QtCore/qobject.h:181:36: note: candidate function not viable: no known conversion from 'void (QDoubleSpinBox::*)(double)' to 'const char *' for 2nd argument
static QMetaObject::Connection connect(const QObject *sender, const char *signal,
^
/home/caiomhin/Qt/6.4.2/gcc_64/include/QtCore/qobject.h:184:36: note: candidate function not viable: no known conversion from 'void (QDoubleSpinBox::*)(double)' to 'const QMetaMethod' for 2nd argument
static QMetaObject::Connection connect(const QObject *sender, const QMetaMethod &signal,
^
/home/caiomhin/Qt/6.4.2/gcc_64/include/QtCore/qobject.h:432:41: note: candidate function not viable: no known conversion from 'Ui_OhmWatts' to 'const QObject' for object argument
inline QMetaObject::Connection QObject::connect(const QObject *asender, const char *asignal,
^
/home/caiomhin/Qt/6.4.2/gcc_64/include/QtCore/qobject.h:201:43: note: candidate template ignored: couldn't infer template argument 'Func2'
static inline QMetaObject::Connection connect(const typename QtPrivate::FunctionPointer<Func1>::Object *sender, Func1 signal,
^
/home/caiomhin/Qt/6.4.2/gcc_64/include/QtCore/qobject.h:242:13: note: candidate template ignored: couldn't infer template argument 'Func2'
connect(const typename QtPrivate::FunctionPointer<Func1>::Object *sender, Func1 signal, const QObject *context, Func2 slot,
^
/home/caiomhin/Qt/6.4.2/gcc_64/include/QtCore/qobject.h:287:13: note: candidate template ignored: couldn't infer template argument 'Func2'
connect(const typename QtPrivate::FunctionPointer<Func1>::Object *sender, Func1 signal, const QObject *context, Func2 slot,
^
/home/caiomhin/Qt/6.4.2/gcc_64/include/QtCore/qobject.h:233:13: note: candidate function template not viable: requires 3 arguments, but 4 were provided
connect(const typename QtPrivate::FunctionPointer<Func1>::Object *sender, Func1 signal, Func2 slot)
^
/home/caiomhin/Qt/6.4.2/gcc_64/include/QtCore/qobject.h:276:13: note: candidate function template not viable: requires 3 arguments, but 4 were provided
connect(const typename QtPrivate::FunctionPointer<Func1>::Object *sender, Func1 signal, Func2 slot)
^
END
These issues are in QObject.h
| For Gerrit Dashboard: QTBUG-110952 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 458477,3 | uic: Generate string-based connections for QLCDNumber::display() | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 458680,2 | uic: Generate string-based connections for QLCDNumber::display() | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
| 458681,2 | uic: Generate string-based connections for QLCDNumber::display() | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |