uic: Generate string-based connections for QLCDNumber::display()

There are still ambiguous overloads of display(), which cause PMF-syntax
to fail.

Task-number: QTBUG-110952
Change-Id: I0887a5a06b026e4d5a20ef732d5892c8ac7fb6db
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
(cherry picked from commit 94c16517b3f8f01309a89598e698931ef77d60db)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>